images-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images-app
  template:
    metadata:
      labels:
        app: images-app
    spec:
      containers:
        - name: images-app
          image: nikitatcelkov/images:latest
          volumeMounts:
            - mountPath: /app/Data
              name: images-volume
      volumes:
        - name: images-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: images-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: images-app
  ports:
  - name: images-app
    protocol: TCP
    port: 8080
    targetPort: 8080
