node-sql-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: node-sql-srv
spec:
 type: NodePort
 ports:
 - port: 1433
   targetPort: 1433
