nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-srv
spec:
  type: NodePort
  selector:
    app: codehelper-app
  ports:
    - name: codehelper-app
      protocol: TCP
      port: 80
      targetPort: 80
