ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: rewritecode.ru
      http:
        paths:
          - path: /questions/all
            pathType: Prefix
            backend:
              service:
                name: codehelper-clusterip-srv
                port:
                  number: 80
